--- a/style.css
+++ b/style.css
@@ -1,3 +1,91 @@
-body {
-    background: skyblue;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 5% 0 5%;
+    padding: 2%;
+}
+.items-link a {
+    white-space: nowrap;
+    text-decoration: none;
+    color: #334155;
+    font-weight: bold;
+}
+.items-link {
+    display: flex;
+    gap: 30px;
+}
+.early-button button {
+    padding: 10px 18px;
+    white-space: nowrap;
+    border: none;
+    border-radius: 6px;
+    background: #22c55e;
+    color: white;
+}
+.hero {
+    margin: 0 auto;
+    text-align: center;
+    background: url("./assets/hero-bg.png");
+    color: white;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 120px 70px 120px 134px;
+    width: 1600px;
+    height: 674px;
+}
+.early {
+    border: no;
+    border-radius: 5px;
+    padding: 10px 18px;
+    white-space: nowrap;
+    background: white;
+    color: #30b868;
+}
+.early img {
+    position: relative;
+    top: 7px;
+    right: 5px;
+}
+.heading-1 {
+    font-size: 60px;
+    font-weight: bold;
+    white-space: nowrap;
+    margin: 16px;
+}
+.heading-2 {
+    font-size: 60px;
+    font-weight: bold;
+    white-space: nowrap;
+    color: #30b868;
+    margin: 16px;
+}
+.about {
+    margin: 16px;
+}
+.buttons button {
+    margin: 20px;
+}
+.btn1 {
+    padding: 10px 18px;
+    white-space: nowrap;
+    border: none;
+    border-radius: 6px;
+    background: #22c55e;
+    color: white;
+}
+.btn2 {
+    padding: 10px 18px;
+    white-space: nowrap;
+    border: 1px solid white;
+    border-radius: 6px;
+    background: none;
+    color: white;
 }
